--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ a:visited {
 /* End Navbar */
 
 /* Logo */
-#logo-google-main {
+.logo-google-main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -94,11 +94,42 @@ a:visited {
 /* End Logo */
 
 /* Search Bar */
-.search-bar {
-  background-color: yellow;
-  padding: 1em;
-  margin: 1em;
+
+
+#search-container {
+display: flex;
+justify-content: row;
+border-style: solid;
+border-color: #f2f2f2;
+border-width: 0.17em;
+border-radius: 3em;
+padding: 0.5em;
+margin: 0em;
+width: 35%;
 }
+
+.form-div {
+  width: 100%;
+  display: flex;
+  margin: 0em;
+  padding: 0em;
+}
+.form-div form {
+  width: 100%;
+  display: flex;
+  margin-left: 0.5em;
+}
+
+.form-div input {
+  width: 100%;
+  border: none;
+  outline: none;
+}
+.form-div span {
+
+}
+ 
+
 
 /* End Search Bar */
 
@@ -155,5 +186,11 @@ footer a {
    padding: 0.5em 0.7em 0.5em 0.7em;
   }
   #navbar-container-five {padding: 0.3em 0.3em 0em 0.3em; margin-left: 0em;}
+}
+
+
+@media only screen and (max-width: 800px) {
+  #search-container {width: 75%;}
+  footer {background-color: yellow;}
 }
 
