--- a/style.css
+++ b/style.css
@@ -16,7 +16,12 @@ body {
 
 #navbar-container-main {
     display: flex;  
-} 
+}
+
+#navbar-container-main a:hover {
+  text-decoration: underline;
+}
+
 
 #navbar-container-sub-one {
   display: flex; 
@@ -42,14 +47,43 @@ body {
 
 #navbar-container-three {background-color: #fff; align-self: center; padding: 0.7em;}
 #navbar-container-four {background-color:  #fff; align-self: center; padding: 0.7em;}
-#navbar-container-five {background-color:  #fff; align-self: center; padding: 0.3em 0.7em 0em 0.3em; margin-left: 2em;}
+#navbar-container-five {
+  background-color:  #fff; 
+  align-self: center; 
+  margin-left: 2em;
+  margin-top: 0.3em;  
+}
+
+#navbar-container-five span {
+  padding: 0.3em
+}
+#navbar-container-five-sub {
+  margin-bottom: 0.2em;
+}
+
+#navbar-container-five-sub:hover {
+  border-radius: 100%;
+  background-color: rgb(241, 240, 240);
+}
+
 #navbar-container-six {
   padding: 0.5em 2em 0.5em 2em;
   margin-left: 0.7em;
   align-self: center;
   background-color: #1a73e8;
-  border-radius: 0.15em;
+  border-radius: 0.15em;  
 }
+
+#navbar-container-six:hover {
+  
+  background-color: #1a8be8;
+}
+
+#navbar-container-six a:hover {
+  text-decoration: none;
+
+}
+
 
 #navbar-container-six a:link { color:#FFF;}
 #navbar-container-six a:visited { color:#FFF;}
@@ -86,6 +120,7 @@ a:visited {
   display: flex;
   background-color: #FFF;
   padding: 1em;
+  margin-top: -10em;
 }
 
 .logo-sub-div img{
@@ -109,7 +144,7 @@ width: 25em;
 }
 
 #search-container:hover {
-  box-shadow: 0px 1px 1px rgba(33,33,33,.2); 
+  box-shadow: 0px 0px 2px rgb(73, 73, 73);
  
 }
 
@@ -131,16 +166,39 @@ width: 25em;
   outline: none;
 }
 .form-div span {
- 
+  
 }
  
-
-
 /* End Search Bar */
+
+/*Sub Button Start*/
+
+.sub-button-div button{
+  background-color: #f8f9fa;
+  border: none;
+  margin-top: 2em;
+  padding: 1em 1.5em 1em 1.5em;
+  border-radius: 0.3em;
+  
+}
+
+.sub-button-div button:hover {
+
+  box-shadow: 0px 0px 2px rgb(73, 73, 73);
+}
+
+.sub-button-div-one {
+  margin-right: 0.8em;
+}
+
+/* Sub Button End*/
+
+
+
 
 /* Footer */
 footer {
-  background-color:#f2f2f2;
+  background-color:#f8f9fa;
   padding: 4em 2em 1.3em 2em;
   display: flex;
   flex-direction: row;
@@ -193,7 +251,7 @@ footer a {
   #navbar-container-six {
    padding: 0.5em 0.7em 0.5em 0.7em;
   }
-  #navbar-container-five {padding: 0.3em 0.3em 0em 0.3em; margin-left: 0em;}
+  
  
   #search-container {width: 35em;}
 }
